--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,5 +6,10 @@
     ],
     "routes": [
         { "src": "/(.*)", "dest": "/" }
-    ]
+    ],
+    "build": {
+    "env": {
+      "PRISMA_CLI_BINARY_TARGETS": "rhel-openssl-3.0.x"
+    }
+  }
 }
